--- a/css/style.css
+++ b/css/style.css
@@ -1,109 +1,135 @@
-body
-{
+*,
+*::before,
+*::after{
+    box-sizing: border-box;
+}
+
+:root{
+    --ff-primary: /*Consolas;*/'Source Code Pro', monospace;
+    --ff-secondary: '';
+
+    --fw-reg: 300;
+    --fw-bold: 900;
+    
+    --clr-light: #fff;
+    --clr-dark: #000;
+    --clr-accent: #ff5f5f;
+    --clr-gm4: linear-gradient(to bottom right, rgb(125, 0, 0), rgb(0, 0, 125));
+
+    --fs-h1: 3rem;
+    --fs-h2: 2.25rem;
+    --fs-h3: 1.25rem;
+    --fs-body: 1rem;
+
+    --bs: 0.25em 0.25em 0.75em rgba(255, 255, 255, 0.25);
+}
+@media (min-width: 800px) {
+    :root{
+        --fs-h1: 4.5rem;
+        --fs-h2: 3.75rem;
+        --fs-h3: 1.75rem;
+        --fs-body: 1.25rem;
+    }
+}
+body {
+    background: var(--clr-gm4);
+    color: var(--clr-light);
     margin: 0;
-    background-color: darkgray;
+    font-family: var(--ff-primary);
+    font-size: var(--fs-body);
+    line-height: 1.6;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
-.Banner
-{
-    height: auto    ;
-    width: auto;
-    overflow: hidden;
-    text-align: center;
-    background-image: linear-gradient(to bottom right, red, blue);
+body::-webkit-scrollbar {
+    display: none;
 }
-.Navigation
-{
-    margin-top: 4px;
-    margin-bottom: 4px;
-    width: 100%;
-    display: table;
-    text-align: center;
+section {
+    padding: 5em 2em;
 }
-.Navigation ul
-{
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    float: none;
-    position: absolute;
-    right: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.Navigation li
-{
-    float: left;
-    width: 160px;
+img {
     display: block;
-}
-.Navigation a
-{
-    display: block;
-    text-align: center;
-    font-family: Arial;
-    font-size: 16px;
-    padding: 8px;
-    background-color: aqua;
-}
-.AboutMe
-{
-    clear: both;
-    width: auto;
-}
-.AboutMe img
-{
-    align-content: left;
-    width: 256px;
-    float: left;
-}
-.AboutMeText
-{
-    font-family: Arial;
-    margin-top: 6px;
-    margin-left: 6px;
-}
-h1
-{
-    font-family: Stencil;
-    font-size: 64px;
-}
-h2
-{
-    margin: 0;
-    font-size: 64px;
-    text-align: center;
-}
-.SocialLinks
-{
-    clear: both;
-    background-image: linear-gradient(to bottom right, red, blue);
-}
-.Links
-{
-    display: table;
     max-width: 100%;
-    height: auto;
-    margin: auto;
 }
-.Link
-{
-    padding: 0;
-    width: auto;
+/* Typography */
+h1, h2, h3 {
+    line-height: 1.1;
+    margin: 0;
+}
+h1 {font-size: var(--fs-h1);}
+h2 {font-size: var(--fs-h2);}
+h3 {font-size: var(--fs-h3);}
+
+.section__title{
+    margin-bottom: .25em;
+}
+/* Intro */
+.section__title--intro {
+    text-align: center;
+}
+/* About Me */
+.about-me__img {
+    box-shadow: var(--bs);
+}
+@media (min-width: 800px) {
+    .about-me {
+        display: grid;
+        grid-column-gap: 1em;
+        grid-template-areas:
+        "img title"
+        "img subTitle"
+        "img subTitle";
+        grid-template-columns: min-content;
+        justify-content: center;
+    }
+    .section__title--about-me {
+        margin-bottom: .5em;
+    }
+    .about-me__img {
+        grid-area: img;
+        min-width: 15em;
+        max-width: 30rem;
+    }
+}
+
+/* Projects */
+.projects {
     display: block;
-    float: left;
 }
-.Link a
-{
-    width: auto;
+.project__img {
+    box-shadow: var(--bs);
+}
+@media (min-width: 800px) {
+    .projects {
+        display: grid;
+        grid-gap: 1em;
+        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    }
+    .project__img {
+        box-shadow: none;
+    }
+    .project__img:hover {
+        filter: blur(10px);
+    }
+}
+/* Footer */
+footer {
+    align-content: center;
+    max-width: 100%;
+    margin-bottom: 2.5em;
+}
+.section__title--footer {
+    text-align: center;
+    margin-bottom: 1em;
+}
+.social-links {
+    align-content: center;
+    display: flex;
+    max-width: 100%;
+}
+.social-link {
+    max-width: 80px;
+    display: block;
     height: auto;
     margin: auto;
-}
-.Link img
-{
-    padding-top: 8px;
-    padding-right: 16px;
-    padding-left: 16px;
-    padding-bottom: 0;
-    height: 64px;
-    width: auto;
 }
