--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
 *::after{
     box-sizing: border-box;
 }
-
 :root{
     --ff-primary: /*Consolas;*/'Source Code Pro', monospace;
     --ff-secondary: '';
@@ -13,7 +12,7 @@
     
     --clr-light: #fff;
     --clr-dark: #000;
-    --clr-accent: #ff5f5f;
+    --clr-accent: #c210f8;
     --clr-gm4: linear-gradient(to bottom right, rgb(125, 0, 0), rgb(0, 0, 125));
 
     --fs-h1: 3rem;
@@ -23,7 +22,7 @@
 
     --bs: 0.25em 0.25em 0.75em rgba(255, 255, 255, 0.25);
 }
-@media (min-width: 800px) {
+@media (min-width: 900px) {
     :root{
         --fs-h1: 4.5rem;
         --fs-h2: 3.75rem;
@@ -31,13 +30,16 @@
         --fs-body: 1.25rem;
     }
 }
+html {
+    scroll-behavior: smooth;
+}
 body {
     background: var(--clr-gm4);
     color: var(--clr-light);
     margin: 0;
     font-family: var(--ff-primary);
     font-size: var(--fs-body);
-    line-height: 1.6;
+    line-height: 1.4;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
 }
@@ -51,6 +53,91 @@ img {
     display: block;
     max-width: 100%;
 }
+/* Header */
+header {
+    display: flex;
+    justify-content: right;
+    padding: 1em;
+}
+nav {
+    position: fixed;
+    background: var(--clr-dark);
+    color: var(--clr-light);
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 100;
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
+}
+.nav__list {
+    list-style: none;
+    display:  flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+.nav__link {
+    color: inherit;
+    font-weight: var(--fw-bold); 
+    font-size: var(--fs-h3);
+}
+.nav__link:hover {
+    color: var(--clr-accent);
+}
+.nav-toggle {
+    padding: .5em;
+    background: transparent;
+    border: 0;
+    cursor: pointer;
+    position: absolute;
+    right: 1em;
+    top: 1em;
+    z-index: 1000;
+}
+/* js */
+.nav-open .nav {
+    transform: translateX(0);
+}
+.nav-open .nav-toggle {
+    position: fixed;
+}
+.nav-open .hamburger {
+    transform: rotate(.625turn);
+}
+.nav-open .hamburger::before {
+    transform: rotate(90deg) translateX(-6px);
+}
+.nav-open .hamburger::after {
+    opacity: 0;
+} 
+/* button */
+.hamburger {
+    display: block;
+    position: relative;
+}
+.hamburger,
+.hamburger::before,
+.hamburger::after {
+    background: var(--clr-accent);
+    width: 2em;
+    height: 3px;
+    border-radius: 1em;
+    transition: transform 250ms ease-in-out;
+}
+.hamburger::before,
+.hamburger::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+}
+.hamburger::before { top: 6px; }
+.hamburger::after { bottom: 6px; }
 /* Typography */
 h1, h2, h3 {
     line-height: 1.1;
@@ -70,8 +157,14 @@ h3 {font-size: var(--fs-h3);}
 /* About Me */
 .about-me__img {
     box-shadow: var(--bs);
+    max-width: 45vw;
+    margin-left: auto;
+    margin-right: auto;
 }
-@media (min-width: 800px) {
+.section__content--about-me {
+    text-align: center;
+}
+@media (min-width: 900px) {
     .about-me {
         display: grid;
         grid-column-gap: 1em;
@@ -84,32 +177,57 @@ h3 {font-size: var(--fs-h3);}
     }
     .section__title--about-me {
         margin-bottom: .5em;
+        max-width: 30em;
+    }
+    .section__content--about-me {
+        text-align: left;
+        max-width: 30em;
+    }
+    .about-me p {
+        max-width: 30em;
     }
     .about-me__img {
         grid-area: img;
-        min-width: 15em;
-        max-width: 30rem;
+        max-width: 25vw;
+        max-height: 80vh;
+        margin-top: auto;
+        margin-bottom: auto;
     }
 }
-
 /* Projects */
 .projects {
     display: block;
+}
+.project {
+    margin-bottom: 5em;
+}
+.project__title {
+    color: var(--clr-accent);
+    text-align: center;
 }
 .project__img {
     box-shadow: var(--bs);
 }
 iframe {
     width: 100%;
+    box-shadow: var(--bs);
 }
-@media (min-width: 800px) {
+@media (min-width: 900px) {
     .projects {
         display: grid;
         grid-gap: 1em;
         grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     }
+    .project {
+        margin-bottom: 0;
+    }
+    .project__title {
+        text-align: left;
+    }
     .project__img {
         box-shadow: none;
+        max-width: 100%;
+        align-self: center;
     }
     .project__img:hover {
         filter: blur(10px);
@@ -126,13 +244,11 @@ footer {
     margin-bottom: 1em;
 }
 .social-links {
-    align-content: center;
     display: flex;
-    max-width: 100%;
+    align-content: center;
 }
 .social-link {
     max-width: 80px;
     display: block;
-    height: auto;
     margin: auto;
 }
