--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
     --clr-gm4: linear-gradient(to bottom right, rgb(125, 0, 0), rgb(0, 0, 125));
 
     --fs-h1: 3rem;
-    --fs-h2: 2.25rem;
+    --fs-h2: 1.25rem;
     --fs-h3: 1.25rem;
     --fs-body: 1rem;
 
@@ -24,8 +24,8 @@
 }
 @media (min-width: 900px) {
     :root{
-        --fs-h1: 4.5rem;
-        --fs-h2: 3.75rem;
+        --fs-h1: 3.5rem;
+        --fs-h2: 2.75rem;
         --fs-h3: 1.75rem;
         --fs-body: 1.25rem;
     }
@@ -36,12 +36,20 @@ html {
 body {
     background: var(--clr-gm4);
     color: var(--clr-light);
-    margin: 0;
     font-family: var(--ff-primary);
     font-size: var(--fs-body);
+    text-align: left;
+    margin-left: 2em;
+    margin-right: 2em;
     line-height: 1.4;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
+}
+@media (min-width: 900px) {
+    body {
+        margin-left: 5em;
+        margin-right: 5rem;
+    }
 }
 body::-webkit-scrollbar {
     display: none;
@@ -141,28 +149,46 @@ nav {
 /* Typography */
 h1, h2, h3 {
     line-height: 1.1;
-    margin: 0;
+    margin-left: 3em;
 }
 h1 {font-size: var(--fs-h1);}
 h2 {font-size: var(--fs-h2);}
 h3 {font-size: var(--fs-h3);}
+p {font-size: var(--fs-h3)}
 
-.section__title{
-    margin-bottom: .25em;
+.intro {
+    padding: 0;
+}
+.about-me {
+    padding: 0;
+}
+.my-projects {
+    padding: 0;
+}
+.section__title {
+    margin: 0;
+    padding-bottom: 4rem;
+    padding-top: 5rem;
+    padding-left: 0;
+    text-align: left;
+}
+.section__content {
+    margin-left: 0;
+    padding-bottom: 2rem;
 }
 /* Intro */
-.section__title--intro {
-    text-align: center;
-}
 /* About Me */
 .about-me__img {
     box-shadow: var(--bs);
     max-width: 45vw;
-    margin-left: auto;
+    margin-left: 0;
     margin-right: auto;
+    margin-bottom: 2em;
+    padding: 0;
 }
-.section__content--about-me {
-    text-align: center;
+.about-me p {
+    margin: 0;
+    padding-left: 2rem;
 }
 @media (min-width: 900px) {
     .about-me {
@@ -173,24 +199,26 @@ h3 {font-size: var(--fs-h3);}
         "img subTitle"
         "img subTitle";
         grid-template-columns: min-content;
-        justify-content: center;
+        justify-content: left;
     }
     .section__title--about-me {
-        margin-bottom: .5em;
         max-width: 30em;
     }
     .section__content--about-me {
-        text-align: left;
-        max-width: 30em;
+        margin: 0;
+        padding-left: 2rem;
     }
     .about-me p {
-        max-width: 30em;
+        padding-left: 2rem;
+        padding-top: 2rem;
+        margin-bottom: 0;
     }
     .about-me__img {
         grid-area: img;
-        max-width: 25vw;
+        max-width: 30rem;
         max-height: 80vh;
-        margin-top: auto;
+        margin-top: 0;
+        margin-left: 0;
         margin-bottom: auto;
     }
 }
@@ -199,11 +227,12 @@ h3 {font-size: var(--fs-h3);}
     display: block;
 }
 .project {
-    margin-bottom: 5em;
+    padding-bottom: 5em;
 }
 .project__title {
+    margin-left: 0;
+    margin-bottom: 1.5em;
     color: var(--clr-accent);
-    text-align: center;
 }
 .project__img {
     box-shadow: var(--bs);
@@ -215,18 +244,22 @@ iframe {
 @media (min-width: 900px) {
     .projects {
         display: grid;
-        grid-gap: 1em;
-        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+        grid-gap: 2rem;
+        grid-template-columns: repeat(auto-fit, minmax(35%, 1fr));
     }
-    .project {
-        margin-bottom: 0;
+    .project p {
+        font-size: 1.25rem;
+
     }
     .project__title {
         text-align: left;
+        margin-left: 0;
+        margin-bottom: 1rem;
     }
     .project__img {
+        padding-bottom: 2rem;
         box-shadow: none;
-        max-width: 100%;
+        max-width: 60%;
         align-self: center;
     }
     .project__img:hover {
@@ -238,10 +271,6 @@ footer {
     align-content: center;
     max-width: 100%;
     margin-bottom: 2.5em;
-}
-.section__title--footer {
-    text-align: center;
-    margin-bottom: 1em;
 }
 .social-links {
     display: flex;
