--- a/css/style.css
+++ b/css/style.css
@@ -1,257 +1,67 @@
-*,
-*::before,
-*::after{
-    box-sizing: border-box;
+html {
+    scroll-behavior: smooth;
 }
-:root{
-    --ff-primary: /*Consolas;*/'Source Code Pro', monospace;
+
+:root {
+    --ff-primary: 'Source Code Pro', monospace;
     --ff-secondary: '';
 
     --fw-reg: 300;
     --fw-bold: 900;
-    
+
     --clr-light: #fff;
     --clr-dark: #000;
     --clr-accent: #c210f8;
     --clr-gm4: linear-gradient(to bottom right, rgb(125, 0, 0), rgb(0, 0, 125));
 
-    --fs-h1: 3rem;
-    --fs-h2: 1.25rem;
-    --fs-h3: 1.25rem;
+    --fs-h1: 1.4rem;
+    --fs-h2: 1.2rem;
+    --fs-h3: 1rem;
     --fs-body: 1rem;
 
     --bs: 0.25em 0.25em 0.75em rgba(255, 255, 255, 0.25);
 }
-@media (min-width: 900px) {
-    :root{
-        --fs-h1: 3.5rem;
-        --fs-h2: 2.75rem;
-        --fs-h3: 1.75rem;
-        --fs-body: 1.25rem;
-    }
-}
-html {
-    scroll-behavior: smooth;
-}
+
 body {
     background: var(--clr-gm4);
     color: var(--clr-light);
     font-family: var(--ff-primary);
     font-size: var(--fs-body);
     text-align: left;
-    margin: 0 2em 2em 2em;
+    margin: 0;
     line-height: 1.4;
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
 }
-@media (min-width: 900px) {
-    body {
-        margin: 0 5em 5em 5em;
-    }
-}
+
 body::-webkit-scrollbar {
     display: none;
 }
-/* Header */
-nav {
-    position: fixed;
-    background: var(--clr-dark);
-    color: var(--clr-light);
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    z-index: 100;
-    transform: translateX(100%);
-    transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
+
+.main {
+    margin: 0 2em 0 2em;
+    padding: 0 0 3rem 0;
 }
-.nav__list {
-    list-style: none;
-    display:  flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 0;
-    padding: 0;
+
+@media (min-width: 900px) {
+    :root {
+        --fs-h1: 3.5rem;
+        --fs-h2: 2.75rem;
+        --fs-h3: 1.75rem;
+        --fs-body: 1.25rem;
+    }
+
+    .main {
+        margin: 0 5em 0 5em;
+        padding: 0 0 3rem 0;
+    }
 }
-.nav__link {
-    color: inherit;
-    font-weight: var(--fw-bold); 
-    font-size: var(--fs-h3);
-}
-.nav__link:hover {
-    color: var(--clr-accent);
-}
-.nav-toggle {
-    padding: .5em;
-    background: transparent;
-    border: 0;
-    cursor: pointer;
-    position: absolute;
-    right: 1em;
-    top: 1em;
-    z-index: 1000;
-}
-/* js */
-.nav-open .nav {
-    transform: translateX(0);
-}
-.nav-open .nav-toggle {
-    position: fixed;
-}
-.nav-open .hamburger {
-    transform: rotate(.625turn);
-}
-.nav-open .hamburger::before {
-    transform: rotate(90deg) translateX(-6px);
-}
-.nav-open .hamburger::after {
-    opacity: 0;
-} 
-/* button */
-.hamburger {
-    display: block;
-    position: relative;
-}
-.hamburger,
-.hamburger::before,
-.hamburger::after {
-    background: var(--clr-accent);
-    width: 2em;
-    height: 3px;
-    border-radius: 1em;
-    transition: transform 250ms ease-in-out;
-}
-.hamburger::before,
-.hamburger::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-}
-.hamburger::before { top: 6px; }
-.hamburger::after { bottom: 6px; }
+
 /* Typography */
-h1, h2, h3 {
-    line-height: 1.1;
-    margin-left: 3em;
-}
-h1 {font-size: var(--fs-h1);}
-h2 {font-size: var(--fs-h2);}
-h3 {font-size: var(--fs-h3);}
-p {font-size: var(--fs-h3)}
-
-.section__title {
-    margin: 6rem 0 4rem 0;
-    padding-left: 0;
-    text-align: left;
-}
-.section__content {
-    margin-left: 0;
-    padding-bottom: 2rem;
-}
-/* Intro */
-/* About Me */
-.about-img {
-    box-shadow: var(--bs);
-    max-width: 40vw;
-    margin-left: 0;
-    margin-right: auto;
-    margin-bottom: 2em;
-    padding: 0;
-}
-.about p {
-    margin: 0;
-}
-@media (min-width: 900px) {
-    .about {
-        display: grid;
-        grid-column-gap: 1em;
-        grid-template-areas:
-        "img title"
-        "img subTitle"
-        "img subTitle";
-        grid-template-columns: min-content;
-        justify-content: left;
-    }
-    .section__title--about {
-        max-width: 30em;
-    }
-    .section__content--about {
-        margin: 0;
-        padding-left: 2rem;
-    }
-    .about p {
-        padding-left: 2rem;
-        padding-top: 2rem;
-        margin-bottom: 0;
-    }
-    .about-img {
-        grid-area: img;
-        max-width: 30rem;
-        max-height: 80vh;
-        margin-top: 0;
-        margin-left: 0;
-        margin-bottom: auto;
-    }
-}
-/* Projects */
-.project {
-    margin-bottom: 5rem;
-}
-.project-title {
-    margin-left: 0;
-    margin-bottom: 1.5em;
-    color: var(--clr-accent);
-}
-.project-img {
-    box-shadow: var(--bs);
-    width: 100%;
-    height: auto; 
-}
-.project-content {
-    margin: 0;
-}
-@media (min-width: 900px) {
-    .projects {
-        display: grid;
-        grid-gap: 12rem;
-        grid-template-columns: 1fr 1fr;
-    }
-    .project {
-        padding: 0;
-        margin-bottom: 6rem;
-    }
-    .project-title {
-        height: 6rem;
-        margin: 0 1rem 0 0;
-    }
-    .project-img {
-        box-shadow: var(--bs);
-        width: 100%;
-        height: auto; 
-        margin-bottom: 5rem;
-    }
-    .project-img:hover {
-        filter: blur(10px);
-    }
-    .project p {
-        margin: 0;
-        max-width: inherit;
-        font-size: 1.25rem;
-    }
-}
-/* Footer */
-
-.social-links {
-    display: flex;
-    align-content: left;
-}
-.social-link {
-    max-width: 80px;
-}
-.link-image {
-    display: block;
-    max-width: 100%;
-}
+h1, h2, h3 { line-height: 1.1; }
+h1 { font-size: var(--fs-h1); }
+h2 { font-size: var(--fs-h2); }
+h3 { font-size: var(--fs-h3); }
+p { font-size: var(--fs-h3); }
