--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html {
 
     --clr-light: #fff;
     --clr-dark: #000;
-    --clr-accent: #c210f8;
+    --clr-accent: #00fbff;
     --clr-gm4: linear-gradient(to bottom right, rgb(125, 0, 0), rgb(0, 0, 125));
 
     --fs-h1: 1.4rem;
