--- a/E-Learning/css/elearning.css
+++ b/E-Learning/css/elearning.css
@@ -1,51 +1,40 @@
 .pagehead {
     display: flex;
-    padding: 3rem 0 1rem 0;
 }
 
-.pagehead img {
-    margin-right: 1rem;
-    height: var(--fs-h1);
-    width: auto;
+.pagehead div {
+    margin: 0.2em 1em 0 0;
+    height: var(--fs-header);
+    width: var(--fs-header);
+    height: 3rem;
+    width: 3rem;
+    background-image: url("../../images/Logo_Simple_Round_Black.png");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-.pagehead h1 {
-    margin: 0;
-    height: var(--fs-h1);
-}
-
-a:link {
-    color: #00ff00;
-}
-
-a:visited {
-    color: yellow;
-}
-
-a:hover {
-    color: red;
-}
-
-a:active {
-    color: pink;
+.pagehead a {
+    display: block;
+    height: 100%;
+    width: 100%;
 }
 
 ul.content-list {
     list-style-type: circle;
 }
 
-.ch_title {
+.chTitle {
     margin: 0;
-    padding: 2rem 0 1rem 0;
+    padding: 3rem 0 1rem 0;
     font-family: var(--ff-secondary);
     color: var(--clr-accent)
 }
 
-.ch__img {
+.ch img {
     width: 100%;
 }
 
-.ch_content {
+.chContent {
     margin: 0;
     padding: 1rem 0 0 0;
     text-align: justify;
@@ -56,17 +45,23 @@ ul.content-list {
 }
 
 table {
+    padding: 1rem 0 0 0;
     width: 100%;
 }
 
-@media (min-width: 900px) {
-    .pagehead {
-        display: flex;
-        padding: 3rem 0 4rem 0;
-    }
+th {
+    border-bottom: 2px solid #ffffff80;
+}
 
-    .ch_title {
-        padding: 6rem 0 4rem 0;
+tr,
+td {
+    border-bottom: 1px dashed #ffffff80;
+}
+
+@media (min-width: 900px) {
+
+    .chTitle {
+        padding: 4rem 0 1rem 0;
     }
 
     .ch_double_content {
