--- a/css/code.css
+++ b/css/code.css
@@ -5,8 +5,8 @@
     --code-border: #535353;
 }
 .pre {
-    margin: 0;
-    padding: 20px;
+    margin: 1rem 0 0 0;
+    padding: 1rem;
     border: 3px solid var(--code-border);
     line-height: 1.4em;
     overflow: auto;
